Update Download and add Dependencies section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Software to automatize creation of djvu files.
 
 <p>
 <ul>
-<li>Compile software</li>
+<li>Compile software (or download from links below)</li>
 <li>Install djvulibre</li>
 <li>Copy depress.exe to djvulibre folder (i.e. "c:\Program Files (x86)\DjVuLibre\")</li>
 <li>Run depress.exe pictures_list.txt output.djvu</li>
@@ -23,10 +23,29 @@ Software to automatize creation of djvu files.
 The software itself licensed under BSD license. If you use it with djvulibre it will be considered as combined work with djvulibre. So it will be licensed under GNU GPL.
 </p>
 
-<h2>Download</h2>
-
+<h3>Dependencies</h3>
 <p>
-See github <a href="https://github.com/plzombie/depress/releases">releases</a> page.
+<ul>
+<li><a href="https://github.com/nothings/stb">stb</a> - Unlicense/MIT</li>
+<li><a href="https://github.com/ImageProcessing-ElectronicPublications/mfbdjvu/discussions/2">djvul</a> - Unlicense</li>
+</ul>
+</p>
+
+<h2>Download</h2>
+<p>
+See github <a href="https://github.com/plzombie/depress/releases">releases</a> page for latest release. Following downloads for version 1.4 provided:
+<ul>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2015_xp.7z">WinXP with latest updates, X64, VS2015</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2019.7z">WinVista or higher, X64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2015_xp_nosse.7z">WinXP with latest updates, X86, VS2015, for processors without SSE instructions</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2019.7z">WinVista or higher, X86, VS2019, SSE2 required</a></li>
+<li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.4/depress-1.4.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.4.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.4.tar.gz">tar.gz</a>)</li>
+</ul>
+</p>
+<p>
+You also need <a href="https://learn.microsoft.com/ru-ru/cpp/windows/latest-supported-vc-redist">VS Runtime</a> to run it. 
 </p>
 </body>
 </html>
