--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Software to automatize creation of djvu files.
 <li>Copy depress.exe to djvulibre folder (i.e. "c:\Program Files (x86)\DjVuLibre\")</li>
 <li>Run depress.exe pictures_list.txt output.djvu</li>
 </ul>
+See <a href="depress.html">documentation</a>.
 </p>
 
 <h2>License</h2>
