Add russian site

--- a/depress.html
+++ b/depress.html
@@ -3,7 +3,7 @@
 <title>[De]press</title>
 </head>
 <body>
-<h1>depress.exe</h1>
+<h1>depress.exe (<a href="depress.ru.html">ru</a>)</h1>
 
 <blockquote>
 depress [options] inputfile.txt outputfile.djvu
