--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>[De]press</title>
 </head>
 <body>
-<h1>Depress</h1>
+<h1>Depress (<a href="index.ru.html">ru</a>)</h1>
 <p>
 Software to automatize creation of djvu files.
 </p>
@@ -12,7 +12,7 @@ Software to automatize creation of djvu files.
 <p>
 <ul>
 <li>Compile software (or download from links below)</li>
-<li>Install djvulibre</li>
+<li>Install <a href="https://sourceforge.net/projects/djvu/files/">djvulibre</a></li>
 <li>Copy depress.exe to djvulibre folder (i.e. "c:\Program Files (x86)\DjVuLibre\")</li>
 <li>Run depress.exe pictures_list.txt output.djvu</li>
 </ul>
@@ -21,7 +21,7 @@ See <a href="depress.html">documentation</a>.
 
 <h2>License</h2>
 <p>
-The software itself licensed under BSD license. If you use it with djvulibre it will be considered as combined work with djvulibre. So it will be licensed under GNU GPL.
+The software itself licensed under <a href="https://github.com/plzombie/depress/blob/master/LICENSE">BSD</a> license. If you use it with djvulibre it will be considered as combined work with djvulibre. So it will be licensed under GNU GPL.
 </p>
 
 <h3>Dependencies</h3>
