Utf8 in index.ru

--- a/index.ru.html
+++ b/index.ru.html
@@ -5,26 +5,26 @@
 <body>
 <h1>Depress (<a href="index.html">en</a>)</h1>
 <p>
-Программа для автоматизации создания djvu файлов.
+РџСЂРѕРіСЂР°РјРјР° РґР»СЏ Р°РІС‚РѕРјР°С‚РёР·Р°С†РёРё СЃРѕР·РґР°РЅРёСЏ djvu С„Р°Р№Р»РѕРІ.
 </p>
-<h2>Как использовать</h2>
+<h2>РљР°Рє РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ</h2>
 
 <p>
 <ul>
-<li> Соберите программу (или скачайте бинарники по ссылкам ниже)</li>
-<li>Установите <a href="https://sourceforge.net/projects/djvu/files/">djvulibre</a></li>
-<li>Скопируйте depress.exe в папку djvulibre (например "c:\Program Files (x86)\DjVuLibre\")</li>
-<li>Запустите depress.exe pictures_list.txt output.djvu</li>
+<li> РЎРѕР±РµСЂРёС‚Рµ РїСЂРѕРіСЂР°РјРјСѓ (РёР»Рё СЃРєР°С‡Р°Р№С‚Рµ Р±РёРЅР°СЂРЅРёРєРё РїРѕ СЃСЃС‹Р»РєР°Рј РЅРёР¶Рµ)</li>
+<li>РЈСЃС‚Р°РЅРѕРІРёС‚Рµ <a href="https://sourceforge.net/projects/djvu/files/">djvulibre</a></li>
+<li>РЎРєРѕРїРёСЂСѓР№С‚Рµ depress.exe РІ РїР°РїРєСѓ djvulibre (РЅР°РїСЂРёРјРµСЂ "c:\Program Files (x86)\DjVuLibre\")</li>
+<li>Р—Р°РїСѓСЃС‚РёС‚Рµ depress.exe pictures_list.txt output.djvu</li>
 </ul>
-Смотрите <a href="depress.ru.html">документацию</a>.
+РЎРјРѕС‚СЂРёС‚Рµ <a href="depress.ru.html">РґРѕРєСѓРјРµРЅС‚Р°С†РёСЋ</a>.
 </p>
 
-<h2>Лицензия</h2>
+<h2>Р›РёС†РµРЅР·РёСЏ</h2>
 <p>
-Программа сама по себе распространяется по лицензии <a href="https://github.com/plzombie/depress/blob/master/LICENSE">BSD</a>. Если вы используете её вместе с djvulibre, это будет считаться комбинированной работой с djvulibre. Таким образом, она будет под лицензией GNU GPL.
+РџСЂРѕРіСЂР°РјРјР° СЃР°РјР° РїРѕ СЃРµР±Рµ СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅСЏРµС‚СЃСЏ РїРѕ Р»РёС†РµРЅР·РёРё <a href="https://github.com/plzombie/depress/blob/master/LICENSE">BSD</a>. Р•СЃР»Рё РІС‹ РёСЃРїРѕР»СЊР·СѓРµС‚Рµ РµС‘ РІРјРµСЃС‚Рµ СЃ djvulibre, СЌС‚Рѕ Р±СѓРґРµС‚ СЃС‡РёС‚Р°С‚СЊСЃСЏ РєРѕРјР±РёРЅРёСЂРѕРІР°РЅРЅРѕР№ СЂР°Р±РѕС‚РѕР№ СЃ djvulibre. РўР°РєРёРј РѕР±СЂР°Р·РѕРј, РѕРЅР° Р±СѓРґРµС‚ РїРѕРґ Р»РёС†РµРЅР·РёРµР№ GNU GPL.
 </p>
 
-<h3>Зависимости</h3>
+<h3>Р—Р°РІРёСЃРёРјРѕСЃС‚Рё</h3>
 <p>
 <ul>
 <li><a href="https://github.com/nothings/stb">stb</a> - Unlicense/MIT</li>
@@ -32,21 +32,21 @@
 </ul>
 </p>
 
-<h2>Скачивание</h2>
+<h2>РЎРєР°С‡РёРІР°РЅРёРµ</h2>
 <p>
-Последнюю сборку смотрите на странице github <a href="https://github.com/plzombie/depress/releases">releases</a>. Следующие загрузки доступны для версии 1.4:
+РџРѕСЃР»РµРґРЅСЋСЋ СЃР±РѕСЂРєСѓ СЃРјРѕС‚СЂРёС‚Рµ РЅР° СЃС‚СЂР°РЅРёС†Рµ github <a href="https://github.com/plzombie/depress/releases">releases</a>. РЎР»РµРґСѓСЋС‰РёРµ Р·Р°РіСЂСѓР·РєРё РґРѕСЃС‚СѓРїРЅС‹ РґР»СЏ РІРµСЂСЃРёРё 1.4:
 <ul>
 <li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
 <li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2015_xp.7z">WinXP с последними обновлениями, X64, VS2015</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2019.7z">WinVista или выше, X64, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2015_xp_nosse.7z">WinXP с последними обновлениями, X86, VS2015, для процессоров без поддержки SSE инструкций</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2019.7z">WinVista или выше, X86, VS2019, требуется SSE2</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2015_xp.7z">WinXP СЃ РїРѕСЃР»РµРґРЅРёРјРё РѕР±РЅРѕРІР»РµРЅРёСЏРјРё, X64, VS2015</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x64_2019.7z">WinVista РёР»Рё РІС‹С€Рµ, X64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2015_xp_nosse.7z">WinXP СЃ РїРѕСЃР»РµРґРЅРёРјРё РѕР±РЅРѕРІР»РµРЅРёСЏРјРё, X86, VS2015, РґР»СЏ РїСЂРѕС†РµСЃСЃРѕСЂРѕРІ Р±РµР· РїРѕРґРґРµСЂР¶РєРё SSE РёРЅСЃС‚СЂСѓРєС†РёР№</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.4/depress_x86_2019.7z">WinVista РёР»Рё РІС‹С€Рµ, X86, VS2019, С‚СЂРµР±СѓРµС‚СЃСЏ SSE2</a></li>
 <li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.4/depress-1.4.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.4.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.4.tar.gz">tar.gz</a>)</li>
 </ul>
 </p>
 <p>
-Вам так же нужен <a href="https://learn.microsoft.com/ru-ru/cpp/windows/latest-supported-vc-redist">VS Runtime</a> для запуска. 
+Р’Р°Рј С‚Р°Рє Р¶Рµ РЅСѓР¶РµРЅ <a href="https://learn.microsoft.com/ru-ru/cpp/windows/latest-supported-vc-redist">VS Runtime</a> РґР»СЏ Р·Р°РїСѓСЃРєР°. 
 </p>
 </body>
 </html>
