Update docs to version 1.6

--- a/depress.ru.html
+++ b/depress.ru.html
@@ -18,6 +18,10 @@ depress [options] inputfile.txt outputfile.djvu
 <li>-layered - создаёт документ со множеством слоёв (отдельные слои для заднего и переднего плана).</li>
 <li>-laydownall n - устанавливает степень даунсемплинга для заднего и переднего плана (в комбинации с `-layered`). По умолчанию 3.</li>
 <li>-laydownfg n - устанавливает дальнейшую степень даунсемплинга для переднего плана (`-laydownall 3` и `-laydownfg 2` дадут степень даунсемплинга переднего плана 6). По умолчанию 2.</li>
+<li>-palettized - создаёт документ с палитрой</li>
+<li>-palcolors - количество цветов от 2 до 256 (по умолчанию 8)</li>
+<li>-quant - истользование квантования для документов с палитрой</li>
+<li>-noteshrink - использование алгоритма noteshrink для документов с палитрой</li>
 <li>-pta - Создаёт заголовок страницы из полного пути к файлу.</li>
 <li>-shortfntitle - Использовать только имя файла (без пути и расширения) для заголовка страницы (в комбинации с `-pta`).</li>
 <li>-temp path - устанавливает папку для временных файлов.</li>
