--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@ The software itself licensed under <a href="https://github.com/plzombie/depress/
 <ul>
 <li><a href="https://github.com/nothings/stb">stb</a> - Unlicense/MIT</li>
 <li><a href="https://github.com/ImageProcessing-ElectronicPublications/mfbdjvu/discussions/2">djvul</a> - Unlicense</li>
+<li><a href="https://github.com/ImageProcessing-ElectronicPublications/noteshrink-c">noteshrink-c</a> - MIT</li>
 </ul>
 </p>
 
 <h2>Download</h2>
 <p>
-See github <a href="https://github.com/plzombie/depress/releases">releases</a> page for latest release. Following downloads for version 1.5 provided:
+See github <a href="https://github.com/plzombie/depress/releases">releases</a> page for latest release. Following downloads for version 1.6 provided:
 <ul>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x64_2015_xp.7z">WinXP with latest updates, X64, VS2015</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x64_2019.7z">WinVista or higher, X64, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x86_2015_xp_nosse.7z">WinXP with latest updates, X86, VS2015, for processors without SSE instructions</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x86_2019.7z">WinVista or higher, X86, VS2019, SSE2 required</a></li>
-<li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.5/depress-1.5.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.5.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.5.tar.gz">tar.gz</a>)</li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x64_2015_xp.7z">WinXP with latest updates, X64, VS2015</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x64_2019.7z">WinVista or higher, X64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x86_2015_xp_nosse.7z">WinXP with latest updates, X86, VS2015, for processors without SSE instructions</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x86_2019.7z">WinVista or higher, X86, VS2019, SSE2 required</a></li>
+<li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.6/depress-1.6.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.6.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.6.tar.gz">tar.gz</a>)</li>
 </ul>
 </p>
 <p>
