--- a/index.ru.html
+++ b/index.ru.html
@@ -29,20 +29,21 @@
 <ul>
 <li><a href="https://github.com/nothings/stb">stb</a> - Unlicense/MIT</li>
 <li><a href="https://github.com/ImageProcessing-ElectronicPublications/mfbdjvu/discussions/2">djvul</a> - Unlicense</li>
+<li><a href="https://github.com/ImageProcessing-ElectronicPublications/noteshrink-c">noteshrink-c</a> - MIT</li>
 </ul>
 </p>
 
 <h2>Скачивание</h2>
 <p>
-Последнюю сборку смотрите на странице github <a href="https://github.com/plzombie/depress/releases">releases</a>. Следующие загрузки доступны для версии 1.5:
+Последнюю сборку смотрите на странице github <a href="https://github.com/plzombie/depress/releases">releases</a>. Следующие загрузки доступны для версии 1.6:
 <ul>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x64_2015_xp.7z">WinXP с последними обновлениями, X64, VS2015</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x64_2019.7z">WinVista или выше, X64, VS2019</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x86_2015_xp_nosse.7z">WinXP с последними обновлениями, X86, VS2015, для процессоров без поддержки SSE инструкций</a></li>
-<li><a href="https://github.com/plzombie/depress/releases/download/1.5/depress_x86_2019.7z">WinVista или выше, X86, VS2019, требуется SSE2</a></li>
-<li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.5/depress-1.5.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.5.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.5.tar.gz">tar.gz</a>)</li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_arm64_2019.7z">Win10, ARM64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_arm_2019.7z">Win10, ARM, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x64_2015_xp.7z">WinXP с последними обновлениями, X64, VS2015</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x64_2019.7z">WinVista или выше, X64, VS2019</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x86_2015_xp_nosse.7z">WinXP с последними обновлениями, X86, VS2015, для процессоров без поддержки SSE инструкций</a></li>
+<li><a href="https://github.com/plzombie/depress/releases/download/1.6/depress_x86_2019.7z">WinVista или выше, X86, VS2019, требуется SSE2</a></li>
+<li>Sources (<a href="https://github.com/plzombie/depress/releases/download/1.6/depress-1.6.7z">7z</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.6.zip">zip</a>, <a href="https://github.com/plzombie/depress/archive/refs/tags/1.6.tar.gz">tar.gz</a>)</li>
 </ul>
 </p>
 <p>
