--- a/depress.html
+++ b/depress.html
@@ -18,6 +18,10 @@ depress [options] inputfile.txt outputfile.djvu
 <li>-layered - create layered document (separate layers for backgroud and foreground).</li>
 <li>-laydownall n - sets downsampling ratio for background and foreground layers (in combination with -layered). Defaults to 3.</li>
 <li>-laydownfg n - sets further foreground downsampling ratio (-laydownall 3 and -laydownfg 2 gets foreground downsampling ratio 6). Defaults to 2.</li>
+<li>-palettized - create palettized document</li>
+<li>-palcolors - number of colors between 2 and 256 (defaults to 8)</li>
+<li>-quant - use quantization for palettized document</li>
+<li>-noteshrink - use noteshrink for palettized document</li>
 <li>-pta - Generates page title from full file name.</li>
 <li>-shortfntitle - Uses only file name (without path and extension) for page title (in combination with -pta).</li>
 <li>-temp path - defines temporary directory.</li>
