--- a/depress.html
+++ b/depress.html
@@ -12,21 +12,21 @@ depress [options] inputfile.txt outputfile.djvu
 <h2>Options</h2>
 
 <ul>
-<li>-bw - create black and white document.</li>
-<li>-errdiff - use error diffusion (in combination with -bw).</li>
-<li>-adaptive - use adaptive binarisation (in combination with -bw).</li>
-<li>-layered - create layered document (separate layers for backgroud and foreground).</li>
-<li>-laydownall n - sets downsampling ratio for background and foreground layers (in combination with -layered). Defaults to 3.</li>
-<li>-laydownfg n - sets further foreground downsampling ratio (-laydownall 3 and -laydownfg 2 gets foreground downsampling ratio 6). Defaults to 2.</li>
-<li>-palettized - create palettized document</li>
-<li>-palcolors - number of colors between 2 and 256 (defaults to 8)</li>
-<li>-quant - use quantization for palettized document</li>
-<li>-noteshrink - use noteshrink for palettized document</li>
-<li>-pta - Generates page title from full file name.</li>
-<li>-shortfntitle - Uses only file name (without path and extension) for page title (in combination with -pta).</li>
-<li>-temp path - defines temporary directory.</li>
-<li>-quality n - defines quality from 1 to 100 (defaults to 100).</li>
-<li>-dpi n - defines dpi (defaults to 100).</li>
+<li><q>-bw</q> - create black and white document.</li>
+<li><q>-errdiff</q> - use error diffusion (in combination with <q>-bw</q>).</li>
+<li><q>-adaptive</q> - use adaptive binarisation (in combination with <q>-bw</q>).</li>
+<li><q>-layered</q> - create layered document (separate layers for backgroud and foreground).</li>
+<li><q>-laydownall n</q> - sets downsampling ratio for background and foreground layers (in combination with <q>-layered</q>). Defaults to 3.</li>
+<li><q>-laydownfg n</q> - sets further foreground downsampling ratio (<q>-laydownall 3</q> and <q>-laydownfg 2</q> gets foreground downsampling ratio 6). Defaults to 2.</li>
+<li><q>-palettized</q> - create palettized document</li>
+<li><q>-palcolors n</q> - number of colors between 2 and 256 (defaults to 8)</li>
+<li><q>-quant</q> - use quantization for palettized document</li>
+<li><q>-noteshrink</q> - use noteshrink for palettized document</li>
+<li><q>-pta</q> - Generates page title from full file name.</li>
+<li><q>-shortfntitle</q> - Uses only file name (without path and extension) for page title (in combination with <q>-pta</q>).</li>
+<li><q>-temp path</q> - defines temporary directory.</li>
+<li><q>-quality n</q> - defines quality from 1 to 100 (defaults to 100).</li>
+<li><q>-dpi n</q> - defines dpi (defaults to 100).</li>
 </ul>
 
 <h2>Example</h2>
