--- a/depress.ru.html
+++ b/depress.ru.html
@@ -12,21 +12,21 @@ depress [options] inputfile.txt outputfile.djvu
 <h2>Параметры</h2>
 
 <ul>
-<li>-bw - создание чёрно-белого (монохромного) документа.</li>
-<li>-errdiff - использование стохастического выравнивания (в комбинации с `-bw`).</li>
-<li>-adaptive - использование адаптивной пороговой бинаризации (в комбинации с `-bw`).</li>
-<li>-layered - создаёт документ со множеством слоёв (отдельные слои для заднего и переднего плана).</li>
-<li>-laydownall n - устанавливает степень даунсемплинга для заднего и переднего плана (в комбинации с `-layered`). По умолчанию 3.</li>
-<li>-laydownfg n - устанавливает дальнейшую степень даунсемплинга для переднего плана (`-laydownall 3` и `-laydownfg 2` дадут степень даунсемплинга переднего плана 6). По умолчанию 2.</li>
-<li>-palettized - создаёт документ с палитрой</li>
-<li>-palcolors - количество цветов от 2 до 256 (по умолчанию 8)</li>
-<li>-quant - истользование квантования для документов с палитрой</li>
-<li>-noteshrink - использование алгоритма noteshrink для документов с палитрой</li>
-<li>-pta - Создаёт заголовок страницы из полного пути к файлу.</li>
-<li>-shortfntitle - Использовать только имя файла (без пути и расширения) для заголовка страницы (в комбинации с `-pta`).</li>
-<li>-temp path - устанавливает папку для временных файлов.</li>
-<li>-quality n - устанавливает качество от 1 до 100 (по умолчанию 100).</li>
-<li>-dpi n - устанавливает dpi (по умолчанию 100).</li>
+<li><q>-bw</q> - создание чёрно-белого (монохромного) документа.</li>
+<li><q>-errdiff</q> - использование стохастического выравнивания (в комбинации с <q>-bw</q>).</li>
+<li><q>-adaptive</q> - использование адаптивной пороговой бинаризации (в комбинации с <q>-bw</q>).</li>
+<li><q>-layered</q> - создаёт документ со множеством слоёв (отдельные слои для заднего и переднего плана).</li>
+<li><q>-laydownall n</q> - устанавливает степень даунсемплинга для заднего и переднего плана (в комбинации с <q>-layered</q>). По умолчанию 3.</li>
+<li><q>-laydownfg n</q> - устанавливает дальнейшую степень даунсемплинга для переднего плана (<q>-laydownall 3</q> и <q>-laydownfg 2</q> дадут степень даунсемплинга переднего плана 6). По умолчанию 2.</li>
+<li><q>-palettized</q> - создаёт документ с палитрой</li>
+<li><q>-palcolors n</q> - количество цветов от 2 до 256 (по умолчанию 8)</li>
+<li><q>-quant</q> - истользование квантования для документов с палитрой</li>
+<li><q>-noteshrink</q> - использование алгоритма noteshrink для документов с палитрой</li>
+<li><q>-pta</q> - Создаёт заголовок страницы из полного пути к файлу.</li>
+<li><q>-shortfntitle</q> - Использовать только имя файла (без пути и расширения) для заголовка страницы (в комбинации с <q>-pta</q>).</li>
+<li><q>-temp path</q> - устанавливает папку для временных файлов.</li>
+<li><q>-quality n</q> - устанавливает качество от 1 до 100 (по умолчанию 100).</li>
+<li><q>-dpi n</q> - устанавливает dpi (по умолчанию 100).</li>
 </ul>
 
 <h2>Пример</h2>
