--- a/depress.html
+++ b/depress.html
@@ -27,6 +27,7 @@ depress [options] inputfile.txt outputfile.djvu
 <li><q>-temp path</q> - defines temporary directory.</li>
 <li><q>-quality n</q> - defines quality from 1 to 100 (defaults to 100).</li>
 <li><q>-dpi n</q> - defines dpi (defaults to 100).</li>
+<li><q>-outline outline_file</q> - sets file with outlines. File contains rows in format <q>page_no|level|text</q>. <q>page_no</q> is page number starting from 1, <q>level</q> is outline level (0 - chapter, 1 - subchapter and so one), <q>text</q> is outline text.</li>
 </ul>
 
 <h2>Example</h2>
