--- a/depress.ru.html
+++ b/depress.ru.html
@@ -27,6 +27,7 @@ depress [options] inputfile.txt outputfile.djvu
 <li><q>-temp path</q> - устанавливает папку для временных файлов.</li>
 <li><q>-quality n</q> - устанавливает качество от 1 до 100 (по умолчанию 100).</li>
 <li><q>-dpi n</q> - устанавливает dpi (по умолчанию 100).</li>
+<li><q>-outline outline_file</q> - устанавливает файл с оглавлениями. Файл содержит строки формата <q>page_no|level|text</q>. <q>page_no</q> - номер страницы начиная с 1, <q>level</q> - уровень оглавления (0 - глава, 1 - подглава и так далее), <q>text</q> - текст оглавления.</li>
 </ul>
 
 <h2>Пример</h2>
